Make the plugin compatible with the asset-pipeline plugin (required for Grails 2.4).
Additionally the jQuery and Bootstrap files were moved to a subfolder
called "platformTools" to avoid clashing with application files
that have the same name.

When this is the case, the application file wins.
Because the application might use a newer version of Bootstrap,
this would possibly lead to the design being broken for the Platform Core views.

--- a/web-app/css/platformTools.css
+++ b/web-app/css/platformTools.css
@@ -1,3 +1,12 @@
+/*
+* This is a manifest file that'll be compiled into platformTools.css,
+* which will include all the files listed below.
+*
+* Any CSS file within this directory can be referenced here using a relative path.
+*
+*= require platformTools/bootstrap.min
+*= require_self
+*/
 body {
     padding-top: 40px;
 }
@@ -11,4 +20,3 @@ body {
     padding: 4px;
     background-color: #eee;
 }
-
